[gd_scene load_steps=13 format=3 uid="uid://bkfj70oe3up3m"]

[ext_resource type="Script" path="res://Escenes/Menú/Menú.gd" id="1_3wa4n"]
[ext_resource type="Texture2D" uid="uid://dk6py6mgps8dv" path="res://Textures/Main-Background.png" id="2_cgkyf"]
[ext_resource type="Texture2D" uid="uid://xtfofat07xhf" path="res://Textures/Inv.png" id="3_qa76t"]
[ext_resource type="Texture2D" uid="uid://fsqp13ju6xg7" path="res://Textures/Inv_Hover.png" id="4_5l6vc"]
[ext_resource type="Texture2D" uid="uid://dyh4wps538dyq" path="res://Textures/Main-Poble-Hover.png" id="5_selkt"]
[ext_resource type="Texture2D" uid="uid://cuk6mmo3duq70" path="res://Textures/Main-Mina-hover.png" id="6_n7vmg"]
[ext_resource type="Texture2D" uid="uid://ctjhqgskk7f2q" path="res://Textures/Main-Bosc-Hover.png" id="7_xtrt4"]
[ext_resource type="PackedScene" uid="uid://dxihj0qcawu0r" path="res://Escenes/Configuració/Copnfig.tscn" id="8_c7o7q"]
[ext_resource type="Texture2D" uid="uid://3psin4x2hdvo" path="res://Textures/Main-Poble.png" id="9_woxjn"]
[ext_resource type="Texture2D" uid="uid://cq7y6088mk0wq" path="res://Textures/Main-Bosc.png" id="10_h1prf"]
[ext_resource type="Texture2D" uid="uid://do8tkdmrlewme" path="res://Textures/Main-Bosc-Dis.png" id="11_ex5s6"]
[ext_resource type="Texture2D" uid="uid://cb71vjpjbdeti" path="res://Textures/pixil-layer-Mina.png" id="12_t06ln"]

[node name="Main" type="Node"]
script = ExtResource("1_3wa4n")

[node name="Bc" type="TextureRect" parent="."]
z_index = -2
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cgkyf")
expand_mode = 1
stretch_mode = 6

[node name="Inv" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.054
anchor_top = 0.093
anchor_right = 0.054
anchor_bottom = 0.093
offset_left = -44.208
offset_top = -44.264
offset_right = 43.792
offset_bottom = 43.736
texture_normal = ExtResource("3_qa76t")
texture_hover = ExtResource("4_5l6vc")
ignore_texture_size = true
stretch_mode = 0

[node name="ConfigButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.82
anchor_top = 0.123
anchor_right = 0.82
anchor_bottom = 0.123
offset_left = -187.64
offset_top = -45.704
offset_right = 188.36
offset_bottom = 45.296
grow_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "Configuració"

[node name="Copnfig" parent="." instance=ExtResource("8_c7o7q")]
mode = 2
initial_position = 0
position = Vector2i(250, 70)
visible = false
unresizable = false

[node name="Poble" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.877
anchor_top = 0.826
anchor_right = 0.877
anchor_bottom = 0.826
offset_left = -92.304
offset_top = -71.248
offset_right = 91.696
offset_bottom = 71.752
texture_normal = ExtResource("9_woxjn")
stretch_mode = 0

[node name="Poble_Hover" type="TextureRect" parent="Poble"]
visible = false
z_index = -1
texture_filter = 1
offset_left = -210.0
offset_top = -210.0
offset_right = 388.0
offset_bottom = 346.0
texture = ExtResource("5_selkt")

[node name="Bosc" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.106
anchor_top = 0.801
anchor_right = 0.106
anchor_bottom = 0.801
offset_left = -122.112
offset_top = -122.048
offset_right = 119.888
offset_bottom = 119.952
scale = Vector2(1.00671, 1.00707)
texture_normal = ExtResource("10_h1prf")
texture_disabled = ExtResource("11_ex5s6")
stretch_mode = 0

[node name="Bosc_Hover" type="TextureRect" parent="Bosc"]
visible = false
z_index = -1
texture_filter = 1
offset_left = -274.16
offset_top = -304.845
offset_right = 583.84
offset_bottom = 544.155
texture = ExtResource("7_xtrt4")

[node name="Mine" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.447
anchor_right = 0.5
anchor_bottom = 0.447
offset_left = -94.0
offset_top = -69.656
offset_right = 88.0
offset_bottom = 69.344
texture_normal = ExtResource("12_t06ln")
stretch_mode = 4

[node name="Mine_Hover" type="TextureRect" parent="Mine"]
visible = false
z_index = -1
texture_filter = 1
offset_left = -283.0
offset_top = -215.0
offset_right = 456.0
offset_bottom = 349.0
texture = ExtResource("6_n7vmg")
stretch_mode = 5

[node name="RBosc" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.789
anchor_right = 0.104
anchor_bottom = 0.789
offset_left = -114.808
offset_top = -43.272
offset_right = 114.192
offset_bottom = 43.728
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Necessites una destral"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="Inv" to="." method="_on_inventari_pressed"]
[connection signal="pressed" from="ConfigButton" to="." method="_on_config_button_pressed"]
[connection signal="mouse_entered" from="Poble" to="." method="_on_poble_mouse_entered"]
[connection signal="mouse_exited" from="Poble" to="." method="_on_poble_mouse_exited"]
[connection signal="pressed" from="Poble" to="." method="_on_tenda_button_pressed"]
[connection signal="mouse_entered" from="Bosc" to="." method="_on_bosc_mouse_entered"]
[connection signal="mouse_exited" from="Bosc" to="." method="_on_bosc_mouse_exited"]
[connection signal="pressed" from="Bosc" to="." method="_on_bosc_pressed"]
[connection signal="mouse_entered" from="Mine" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="Mine" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="Mine" to="." method="_on_mina_pressed"]
